@@ -5,6 +5,7 @@ Date: 2022.06.XX
     - Fixed Pyalienlife korlex milk barrels not being properly replaced due to py using diff. names
     - Fixed Pyrawores coke oven gas items with certain temperatures having no usage
     - Fixed omni.fluid.add_multi_temp_recipe() not working under certain conditions
+    - Automatically applay all exception rules for compat to compressed versions aswell
 ---------------------------------------------------------------------------------------------------
 Version: 4.1.23
 Date: 2022.06.10
